# aoc-python

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  post-create.sh
src/2015/: 1.py  2.py  3.py  4.py  5.py  6.py  template.py
src/utils/: filehandler.py
